tests/paczka1/small_fuzzy/58751068.err
Error in line 7: 57MIwAN S416 95,7
Error in line 14: VG9tckpz A939 25,21
